style cleanup add breaks to fix misalignment of usability boxes

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -191,3 +191,8 @@ table.compatibility
   margin: 0 auto;
   width: unset;
 }
+
+div.compat-usability
+{
+  max-width: 300px; float: left; padding: 20px; text-align: center;
+}
